<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/south_kol"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/south_kol" />
        <item
            android:id="@+id/north_kol"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/north_kol" />
        <item
            android:id="@+id/center_kol"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/center_kol" />
        <item
            android:id="@+id/nav_showroute"
            android:icon="@drawable/ic_bubble_chart_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
