<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/my_image">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/heading"
                    android:textSize="80sp"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:layout_centerInParent="true"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/showmap"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:id="@+id/showmap_icon"
                                android:background="@drawable/circle_purple"
                                android:padding="10dp"
                                app:srcCompat="@drawable/ic_map_black_24dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_in_map"
                                android:textSize="@dimen/options"
                                android:paddingTop="5dp"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="All time biggest Durga Puja pandals on Gmap"
                                android:textColor="@android:color/darker_gray"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/showlist"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:background="@drawable/circle_green"
                                android:id="@+id/showlist_icon"
                                android:padding="10dp"
                                app:srcCompat="@drawable/ic_view_list_black_24dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:text="@string/list"
                                android:textSize="@dimen/options"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="Durga Puja pandal's name and rating"
                                android:textColor="@android:color/darker_gray"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/showroute"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:background="@drawable/circle_pink"
                                android:padding="10dp"
                                android:id="@+id/showroute_icon"
                                app:srcCompat="@drawable/ic_directions_subway_black_24dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:text="@string/suggested_route"
                                android:textSize="@dimen/options"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="Suggested route for visiting puja pandals"
                                android:textColor="@android:color/darker_gray"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/showpics"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="10dp"
                                android:id="@+id/showpics_icon"
                                android:background="@drawable/circle_yello"
                                app:srcCompat="@drawable/ic_image_black_24dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/show_pictures"
                                android:textSize="@dimen/options"
                                android:textStyle="bold"
                                android:paddingTop="10dp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="Durga Puja pandal's and puja's pictures"
                                android:textColor="@android:color/darker_gray"/>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/share"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="10dp"
                                android:background="@drawable/circle_share"
                                android:id="@+id/share_icon"
                                app:srcCompat="@drawable/ic_menu_share2"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:text="@string/share"
                                android:textSize="@dimen/options"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="Share the app and help others"
                                android:textColor="@android:color/darker_gray"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/help"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/help_icon"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:padding="10dp"
                                android:background="@drawable/circle_help"
                                app:srcCompat="@drawable/ic_help_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/help"
                                android:textSize="@dimen/options"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_margin="10dp"
                                android:background="@color/light_grey"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textSize="12sp"
                                android:text="Visit safe and feel free to ask any query"
                                android:textColor="@android:color/darker_gray"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>